// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly is mobile 1`] = `
<div>
  <div
    class="common-tools-container"
  >
    <div
      title="Undo"
    >
      <svgr-url />
    </div>
    <div
      title="Redo"
    >
      <svgr-url />
    </div>
  </div>
</div>
`;

exports[`should render correctly not hiding, not mobile and in web version 1`] = `
<div>
  <div
    class="common-tools-container"
  >
    <div
      title="Undo"
    >
      <svgr-url />
    </div>
    <div
      title="Redo"
    >
      <svgr-url />
    </div>
    <div
      title="Delete"
    >
      <svgr-url />
    </div>
  </div>
</div>
`;
